# PixelUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: ListViewDemo1.cpp  app_counter.cpp  app_cube_demo.cpp  app_dynamic_info.cpp  app_info.cpp  app_penis.cpp  charging_animation.cpp
include/: EmuWorker.h  MainWindow.h  PixelUI.h  app_example2.h  config.h  u8g2_wrapper.h
include/PixelScriptUI/: app_1.h  app_example.h  menu_manager.h  pixelscriptui.h  root_menu.h
include/PixelScriptUI/core/menu/: menu_system.h
include/PixelUI/: config.h  pixelui.h
include/PixelUI/core/: CommonTypes.h
include/PixelUI/core/ViewManager/: ViewManager.h
include/PixelUI/core/animation/: animation.h  anime.h
include/PixelUI/core/app/: IApplication.h  app_system.h
include/PixelUI/core/menu/: menu_system.h
include/PixelUI/core/ui/: IDrawable.h
include/PixelUI/core/ui/AppView/: AppView.h  Appview.h
include/PixelUI/core/ui/ListView/: ListView.h
include/PixelUI/core/ui/Popup/: IPopupRenderer.h  Popup.h  PopupManager.h
include/PixelUI/core/widgets/: widgets.h
include/PixelUI/core/widgets/brace/: brace.h
include/PixelUI/core/widgets/histogram/: histogram.h
include/PixelUI/core/widgets/texts/: texts.h
include/core/: CommonTypes.h
include/core/ViewManager/: ViewManager.h
include/core/animation/: animation.h
include/core/app/: IApplication.h  app_system.h
include/focus/: focus.h
include/ui/AppView/: AppView.h
include/ui/ListView/: ListView.h
include/ui/Popup/: Popup.h
include/widgets/: IWidget.h  widgets.h
include/widgets/brace/: brace.h
include/widgets/histogram/: histogram.h
include/widgets/iconButton/: iconButton.h
include/widgets/texts/: texts.h
simulator/: CMakeLists.txt  MainWindow.h  main.cpp
src/: CMakeLists.txt  EmuWorker.cpp  MainWindow.cpp  PixelUI.cpp  app_counter.cpp  app_cube_demo.cpp  app_dynamic_info.cpp  app_example.cpp  app_example2.cpp  app_example3.cpp  app_example4.cpp  app_info.cpp  app_penis.cpp  charging_animation.cpp  main.cpp  u8g2_wrapper.cpp
src/ListViewDemo/: ListViewDemo1.cpp
src/PixelScriptUI/: app_1.cpp  app_example.cpp  app_example2.cpp  menu_manager.cpp  pixelscriptui.cpp  root_menu.cpp
src/PixelScriptUI/core/animation/: anime.cpp
src/PixelScriptUI/core/menu/: menu_system.cpp
src/PixelUI/: pixelui.cpp
src/PixelUI/core/ViewManager/: ViewManager.cpp
src/PixelUI/core/animation/: animation.cpp  anime.cpp
src/PixelUI/core/app/: app_system.cpp
src/PixelUI/core/menu/: menu_system.cpp
src/PixelUI/core/ui/AppView/: AppView.cpp
src/PixelUI/core/ui/Appview/: AppView.cpp
src/PixelUI/core/ui/ListView/: ListView.cpp
src/PixelUI/core/ui/Popup/: Popup.cpp  PopupManager.cpp
src/PixelUI/core/widgets/: widgets.cpp
src/PixelUI/core/widgets/brace/: brace.cpp
src/PixelUI/core/widgets/histogram/: histogram.cpp
src/PixelUI/core/widgets/texts/: texts.cpp
src/core/ViewManager/: ViewManager.cpp
src/core/animation/: animation.cpp
src/core/app/: app_system.cpp
src/focus/: focus.cpp
src/ui/AppView/: AppView.cpp
src/ui/ListView/: ListView.cpp
src/ui/Popup/: Popup.cpp
src/widgets/: widgets.cpp
src/widgets/brace/: brace.cpp
src/widgets/histogram/: histogram.cpp
src/widgets/iconButton/: iconButton.cpp
src/widgets/texts/: texts.cpp
